# safaricom-daraja-mcp

./: .gitignore  LICENSE  README.md
docs/: api-reference.md  integration-guide.md  mcp-integration-guide.md
examples/: README.md  b2c-payment-example.py  qr-code-example.php  stk-push-example.js
nodejs/: .env.example  LICENSE  README.md  package-lock.json  package.json  test-mcp.cjs  test-mcp.js  tsconfig.json
nodejs/src/: daraja-client.ts  index.ts  schemas.ts  types.ts
php/: .env.example  README.md  composer.json  test_mcp.php
php/src/Client/: DarajaClient.php
php/src/Exceptions/: DarajaException.php
php/src/Server/: McpServer.php
php/src/Types/: ApiEndpoints.php  DarajaConfig.php  Requests.php  Responses.php
python/: .env.example  README.md  pyproject.toml  requirements.txt  run_inspector.sh  test_mcp.py
python/mcp_daraja/: __init__.py  __main__.py  client.py  server.py  types.py
