[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safaricom-daraja-mcp"
version = "1.0.0"
description = "MCP server for Safaricom Daraja API integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Meshack Musyoka", email = "meshnzai1@gmail.com" }
]
keywords = [
    "safaricom",
    "daraja", 
    "mpesa",
    "mcp",
    "payment",
    "api",
    "kenya",
    "model-context-protocol"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale"
]
dependencies = [
    "mcp>=1.13.0,<2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "anyio>=4.4.0"
]

[project.urls]
Homepage = "https://github.com/Meshhack/safaricom-daraja-mcp"
Repository = "https://github.com/Meshhack/safaricom-daraja-mcp"
Issues = "https://github.com/Meshhack/safaricom-daraja-mcp/issues"

[project.scripts]
mcp-daraja = "mcp_daraja.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_daraja"]